--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   </div>
     <script
       type="text/javascript"
-      src="https://cronchatcronapp.cronapp.io/get-chat?token=5345fdggdf78852211aRgdfg678342434bffdhSETaa"
+      src="https://cronchatnovo.cronapp.io/get-chat?token=5345fdggdf78852211aRgdfg678342434bffdhSETaa"
     ></script>
   </body>
 </html>
