--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </video>
       <div class="content">
           <h1>CHATBOT</h1>
-          <img src="./img/logo.png" class="logo">
+          <img src="./img/lyceum.png" class="logo">
       </div>
   </div>
     <script
